--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   "license": "MIT",
   "browserify": {
     "transform": [
-      "6to5ify"
+      "babelify"
     ]
   },
   "devDependencies": {
-    "uglifyjs": "^2.3.6",
+    "uglify-js": "^2.3.6",
     "browserify": "^8.1.0",
     "watchify": "^2.2.1",
-    "6to5ify": "^3.1.2"
+    "babelify": "^5.0.3"
   },
   "dependencies": {
-    "when": "^3.6.4",
-    "rest": "^1.2.0",
+    "react": "^0.12.2",
     "react-router": "^0.11.6",
-    "react": "^0.12.2"
+    "rest": "^1.2.0",
+    "when": "^3.6.4"
   }
 }
