--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "react": "^0.12.2",
-    "react-lazy-load": "^1.0.1",
+    "react-lazy-load": "kjell/react-lazy-load#2a75bf53630c6567a6a6a69dca313245434caf82",
     "react-router": "^0.11.6",
     "rest": "^1.2.0",
     "when": "^3.6.4"
