--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "MIT",
   "browserify": {
     "transform": [
-      ["babelify", {"stage": 1}]
+      [
+        "babelify",
+        {
+          "stage": 1,
+          "optional": "runtime"
+        }
+      ]
     ]
   },
   "devDependencies": {
@@ -22,6 +28,7 @@
     "babelify": "^6.1.3"
   },
   "dependencies": {
+    "babel-runtime": "^5.8.20",
     "debounce": "^1.0.0",
     "leaflet-0.8-dev": "^0.8.0-dev-20150217",
     "linear-partitioning": "^0.3.1",
