--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^0.13.0",
     "react-sticky": "^2.4.0",
     "rest": "^1.2.0",
-    "when": "^3.6.4"
+    "when": "^3.6.4",
+    "museum-tile-layer": "0.0.1"
   }
 }
