--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
     "material-ui": "^0.10.1",
+    "museum-tile-layer": "0.0.1",
     "react": "^0.13.0",
     "react-click-to-select": "^1.0.0",
+    "react-helmet": "^1.1.3",
     "react-lazy-load": "loktar00/react-lazy-load#aa5f38695fa38dbfd287ec7d12872dfd94f0de76",
     "react-router": "^0.13.0",
     "react-sticky": "^2.4.0",
     "rest": "^1.2.0",
-    "when": "^3.6.4",
-    "museum-tile-layer": "0.0.1"
+    "when": "^3.6.4"
   }
 }
