--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel": "^5.8.23",
     "babelify": "^6.1.3",
     "browserify": "^8.1.0",
+    "express": "^4.13.3",
     "uglify-js": "^2.3.6",
     "watchify": "^2.2.1"
   },
@@ -38,7 +39,7 @@
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
     "material-ui": "^0.10.1",
-    "museum-tile-layer": "0.0.1",
+    "museum-tile-layer": "kjell/museumTileLayer#gh-pages",
     "react": "^0.13.0",
     "react-click-to-select": "^1.0.0",
     "react-helmet": "^1.1.3",
@@ -46,6 +47,7 @@
     "react-router": "^0.13.0",
     "react-sticky": "^2.4.0",
     "rest": "^1.2.0",
+    "serve-static": "^1.10.0",
     "speakingurl": "^6.0.0",
     "when": "^3.6.4"
   }
