--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "babel-runtime": "^5.8.20",
+    "classnames": "^2.1.3",
     "debounce": "^1.0.0",
     "humanize-number": "0.0.2",
     "leaflet": "^1.0.0-beta.1",
