--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "museum-tile-layer": "kjell/museumTileLayer#gh-pages",
     "react": "^0.13.0",
     "react-click-to-select": "^1.0.0",
+    "react-cookie": "^0.3.4",
     "react-helmet": "^1.1.3",
     "react-lazy-load": "loktar00/react-lazy-load#aa5f38695fa38dbfd287ec7d12872dfd94f0de76",
     "react-router": "^0.13.0",
