--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
           "stage": 1,
           "optional": "runtime"
         }
-      ]
+      ],
+      ["envify"]
     ]
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "react": "^0.13.0",
     "react-click-to-select": "^1.0.0",
     "react-cookie": "^0.3.4",
+    "react-ga": "1.2.0",
     "react-helmet": "^1.1.3",
     "react-lazy-load": "loktar00/react-lazy-load#aa5f38695fa38dbfd287ec7d12872dfd94f0de76",
     "react-router": "^0.13.0",
