--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "marked": "^0.3.3",
     "material-ui": "^0.10.1",
     "museum-tile-layer": "kjell/museumTileLayer#gh-pages",
+    "ramda": "0.18.0",
     "react": "^0.13.0",
     "react-click-to-select": "^1.0.0",
     "react-cookie": "^0.3.4",
