--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-cookie": "^0.3.4",
     "react-ga": "1.2.0",
     "react-helmet": "^1.1.3",
+    "react-inlinesvg": "0.4.2",
     "react-lazy-load": "loktar00/react-lazy-load#aa5f38695fa38dbfd287ec7d12872dfd94f0de76",
     "react-router": "^0.13.0",
     "react-sticky": "^2.4.0",
