--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "babel-runtime": "^5.8.20",
+    "capitalize": "1.0.0",
     "classnames": "^2.1.3",
     "debounce": "^1.0.0",
     "humanize-number": "0.0.2",
