--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rest": "^1.2.0",
     "serve-static": "^1.10.0",
     "speakingurl": "^6.0.0",
+    "split-array": "1.0.1",
     "when": "^3.6.4"
   }
 }
