--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "debounce": "^1.0.0",
     "humanize-number": "0.0.2",
     "leaflet": "^1.0.0-beta.1",
+    "leaflet-fullscreen": "1.0.1",
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
     "material-ui": "^0.10.1",
