--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "serve-static": "^1.10.0",
     "speakingurl": "^6.0.0",
     "split-array": "1.0.1",
+    "useragent": "2.1.9",
     "when": "^3.6.4"
   }
 }
