--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "watchify index.js -o bundle.js -dv",
     "watchServer": "node-supervisor --watch server.js src server.babel.js",
     "serve": "PORT=1314 node server.babel.js",
-    "build": "NODE_ENV=production browserify index.js | uglifyjs -c -m | sed 's/localhost:4680/search.artsmia.org/'> bundle.js"
+    "build": "NODE_ENV=production browserify index.js | uglifyjs -c -m | sed 's|http://localhost:4680|https://search.artsmia.org|'> bundle.js"
   },
   "author": "",
   "license": "MIT",
