--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
           "optional": "runtime"
         }
       ],
-      ["envify"]
+      [
+        "envify"
+      ]
     ]
   },
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel": "^5.8.24",
     "babelify": "^6.1.3",
     "browserify": "^8.1.0",
     "express": "^4.13.3",
     "uglify-js": "^2.3.6",
-    "watchify": "^2.2.1"
+    "watchify": "^3.9.0"
   },
   "dependencies": {
     "babel-runtime": "^5.8.20",
@@ -43,16 +45,17 @@
     "leaflet-fullscreen": "1.0.1",
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
-    "material-ui": "^0.10.1",
     "museum-tile-layer": "artsmia/museumTileLayer#gh-pages",
-    "react": "^0.13.0",
+    "react": "^0.14.8",
+    "react-addons-pure-render-mixin": "^0.14.8",
     "react-click-to-select": "^1.0.0",
     "react-cookie": "^0.3.4",
+    "react-dom": "^0.14.8",
     "react-ga": "1.2.0",
     "react-helmet": "^1.1.3",
-    "react-inlinesvg": "0.4.2",
-    "react-lazy-load": "loktar00/react-lazy-load#aa5f38695fa38dbfd287ec7d12872dfd94f0de76",
-    "react-router": "^0.13.0",
+    "react-inlinesvg": "0.5.5",
+    "react-lazy-load": "^3.0.11",
+    "react-router": "^0.13.6",
     "react-sticky": "^2.4.0",
     "rest": "^1.2.0",
     "serve-static": "^1.10.0",
