--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run watch & npm run serve",
     "watch": "watchify index.js -o bundle.js -dv",
-    "watchServer": "node-supervisor --watch server.js src server.babel.js",
+    "watchServer": "node-supervisor --watch server.js,src server.babel.js",
     "serve": "PORT=1314 node server.babel.js",
     "build": "NODE_ENV=production browserify index.js | uglifyjs -c -m | sed 's|http://localhost:4680|https://search.artsmia.org|'> bundle.js"
   },
@@ -36,6 +36,7 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
+    "@mapbox/react-click-to-select": "^1.1.1",
     "babel-runtime": "^5.8.20",
     "capitalize": "1.0.0",
     "classnames": "^2.1.3",
@@ -48,11 +49,10 @@
     "museum-tile-layer": "artsmia/museumTileLayer#gh-pages",
     "react": "^0.14.8",
     "react-addons-pure-render-mixin": "^0.14.8",
-    "react-click-to-select": "^1.0.0",
     "react-cookie": "^0.3.4",
     "react-dom": "^0.14.8",
     "react-ga": "1.2.0",
-    "react-helmet": "^1.1.3",
+    "react-helmet": "^3.3.2",
     "react-inlinesvg": "0.5.5",
     "react-lazy-load": "^3.0.11",
     "react-router": "^0.13.6",
