--- a/package.json
+++ b/package.json
@@ -16,11 +16,7 @@
   "browserify": {
     "transform": [
       [
-        "babelify",
-        {
-          "stage": 1,
-          "optional": "runtime"
-        }
+        "babelify"
       ],
       [
         "envify"
@@ -28,8 +24,9 @@
     ]
   },
   "devDependencies": {
-    "babel": "^5.8.24",
-    "babelify": "^6.1.3",
+    "babel": "^6.23.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babelify": "^7.3.0",
     "browserify": "^8.1.0",
     "express": "^4.13.3",
     "uglify-js": "^2.3.6",
@@ -37,7 +34,10 @@
   },
   "dependencies": {
     "@mapbox/react-click-to-select": "^1.1.1",
-    "babel-runtime": "^5.8.20",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "capitalize": "1.0.0",
     "classnames": "^2.1.3",
     "debounce": "^1.0.0",
