--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run watch & npm run serve",
-    "watch": "watchify index.js -o bundle.js -dv",
+    "watch": "watchify index.js -p livereactload -o bundle.js -dv",
     "watchServer": "node-supervisor --watch server.js,src server.babel.js",
     "serve": "PORT=1314 node server.babel.js",
     "build": "NODE_ENV=production browserify index.js | uglifyjs -c -m | sed 's|http://localhost:4680|https://search.artsmia.org|'> bundle.js"
@@ -29,6 +29,9 @@
     "babelify": "^7.3.0",
     "browserify": "^8.1.0",
     "express": "^4.13.3",
+    "livereactload": "^3.2.0",
+    "react-proxy": "^1.1.8",
+    "react-transform-hmr": "^1.0.4",
     "uglify-js": "^2.3.6",
     "watchify": "^3.9.0"
   },
