--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-router": "^0.13.6",
     "react-sticky": "^2.4.0",
     "rest": "^1.3.0",
+    "rightsstatements": "file:../rightstatements-data-json",
     "serve-static": "^1.10.0",
     "speakingurl": "^6.0.0",
     "split-array": "1.0.1",
