--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "debounce": "^1.0.0",
     "humanize-number": "0.0.2",
     "leaflet": "^1.0.0-beta.1",
+    "leaflet-iiif": "^2.0.1",
     "leaflet-fullscreen": "1.0.1",
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
