finish rights statements implementation

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "babel-core": "^6.23.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babelify": "^7.3.0",
-    "browserify": "^8.1.0",
+    "browserify": "^9.0.8",
     "express": "^4.13.3",
     "livereactload": "^3.2.0",
     "react-proxy": "^1.1.8",
@@ -51,7 +51,7 @@
     "leaflet-fullscreen": "1.0.1",
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
-    "museum-tile-layer": "artsmia/museumTileLayer#gh-pages",
+    "museum-tile-layer": "github:artsmia/museumTileLayer#gh-pages",
     "ramda": "^0.23.0",
     "react": "^0.14.8",
     "react-addons-pure-render-mixin": "^0.14.8",
