--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "classnames": "^2.1.3",
     "debounce": "^1.0.0",
     "humanize-number": "0.0.2",
-    "leaflet": "^1.0.0-beta.1",
-    "leaflet-iiif": "^2.0.1",
+    "leaflet": "^1.6.0",
     "leaflet-fullscreen": "1.0.1",
+    "leaflet-iiif": "^3.0.0",
     "linear-partitioning": "^0.3.1",
     "marked": "^0.3.3",
     "museum-tile-layer": "github:artsmia/museumTileLayer#gh-pages",
