--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "capitalize": "1.0.0",
     "classnames": "^2.1.3",
     "debounce": "^1.0.0",
+    "fathom-client": "^3.0.0",
     "humanize-number": "0.0.2",
     "leaflet": "^1.6.0",
     "leaflet-fullscreen": "1.0.1",
