--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run watch & npm run serve",
     "watch": "watchify index.js -p livereactload -o bundle.js -dv",
     "watchServer": "node-supervisor -n error --watch server.js,src server.babel.js",
+    "watchSass": "rewatch sass/* -c \"sassc -lm sass/main.scss css/main.css\"",
     "serve": "PORT=1314 node server.babel.js",
     "build": "NODE_ENV=production browserify index.js | uglifyjs -c -m | sed 's|http://localhost:4680|https://search.artsmia.org|'> bundle.js"
   },
