--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "next": "9.5.4",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "tailwindcss": "^1.8.12"
   }
 }
