add prettier + eslint

--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -14,5 +14,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "tailwindcss": "^1.8.12"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.3",
+    "prettier": "^2.1.2"
   }
 }
