--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "prettier": "^2.1.2"
   }
