add husky for pre-commit lint enforcement

--- a/foot-in-the-door/.eslintrc
+++ b/foot-in-the-door/.eslintrc
@@ -16,5 +16,10 @@
       "specialLink": [ "hrefLeft", "hrefRight" ],
       "aspects": [ "invalidHref", "preferButton" ]
     }]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
