--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -16,6 +16,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "reakit": "^1.2.5",
     "tailwindcss": "^1.8.12"
   },
   "devDependencies": {
