tweak arrayChunk to balance the last few rows
Don't leave one or two artworks alone in the last row - instead increase
the size of the previous and final row

--- a/foot-in-the-door/.huskyrc
+++ b/foot-in-the-door/.huskyrc
@@ -1,5 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "npm run lint --silent"
+    "pre-commit": "npm run lint --silent && npm run test --silent"
   }
 }
