--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "npm run lint:prettier && npm run lint:eslint",
     "lint:prettier": "prettier --check {pages,components,util}/**.js",
-    "lint:eslint": "eslint {pages,components,util}/**.js"
+    "lint:eslint": "eslint {pages,components,util}/**.js",
+    "test": "jest"
   },
   "dependencies": {
     "next": "9.5.4",
@@ -21,10 +22,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.0",
     "eslint": "^7.10.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "husky": "^4.3.0",
+    "jest": "^26.6.0",
     "prettier": "^2.1.2"
   }
 }
