also lint+test ahead of `git push`

--- a/foot-in-the-door/.huskyrc
+++ b/foot-in-the-door/.huskyrc
@@ -1,5 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "npm run lint --silent && npm run test --silent"
+    "pre-commit": "npm run lint --silent && npm run test --silent",
+    "pre-push": "npm run lint --silent && npm run test --silent"
   }
 }
