--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@meronex/icons": "^4.0.0",
     "next": "9.5.4",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
