--- a/foot-in-the-door/.eslintrc
+++ b/foot-in-the-door/.eslintrc
@@ -5,7 +5,8 @@
   "env": {
     "browser": true,
     "node": true,
-    "jest": true
+    "jest": true,
+    "es6": true
   },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
