chore: eslint warn on `console`, `alert`, `debug`
Also remove errant console.logs

--- a/foot-in-the-door/.eslintrc
+++ b/foot-in-the-door/.eslintrc
@@ -16,7 +16,10 @@
       "components": [ "Link" ],
       "specialLink": [ "hrefLeft", "hrefRight" ],
       "aspects": [ "invalidHref", "preferButton" ]
-    }]
+    }],
+    "no-console": "warn",
+    "no-debugger": "warn",
+    "no-alert": "warn"
   },
   "settings": {
     "react": {
