--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@meronex/icons": "^4.0.0",
+    "@tailwindcss/typography": "^0.2.0",
     "hashids": "^2.2.1",
     "next": "9.5.4",
     "postcss-flexbugs-fixes": "^4.2.1",
