upgrade to next 10

--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -15,11 +15,11 @@
     "@meronex/icons": "^4.0.0",
     "@tailwindcss/typography": "^0.2.0",
     "hashids": "^2.2.1",
-    "next": "9.5.4",
+    "next": "^10.0.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reakit": "^1.2.5",
     "slug": "^4.0.1",
     "tailwindcss": "^1.8.12"
