--- a/foot-in-the-door/.huskyrc
+++ b/foot-in-the-door/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
     "pre-commit": "npm run lint --silent && npm run test --silent",
-    "pre-push": "npm run lint --silent && npm run test --silent"
+    "pre-push": "npm run lint --silent && npm run test --silent && npm run build --silent"
   }
 }
