--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -33,5 +33,10 @@
     "husky": "^4.3.0",
     "jest": "^26.6.0",
     "prettier": "^2.1.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
