--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@meronex/icons": "^4.0.0",
     "@tailwindcss/typography": "^0.2.0",
+    "gray-matter": "^4.0.2",
     "hashids": "^2.2.1",
     "next": "^10.0.0",
     "postcss-flexbugs-fixes": "^4.2.1",
