--- a/foot-in-the-door/package.json
+++ b/foot-in-the-door/package.json
@@ -9,7 +9,8 @@
     "lint": "npm run lint:prettier && npm run lint:eslint",
     "lint:prettier": "prettier --check {pages,components,util}/**.js",
     "lint:eslint": "eslint {pages,components,util}/**.js",
-    "test": "jest"
+    "test": "jest",
+    "ci": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
     "@meronex/icons": "^4.0.0",
