--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-router": "^0.13.6",
     "react-sticky": "^2.4.0",
     "rest": "^1.3.0",
-    "rightsstatements": "file:../rightstatements-data-json",
+    "rightsstatements": "github:artsmia/rightsstatements-data-model",
     "serve-static": "^1.10.0",
     "speakingurl": "^6.0.0",
     "split-array": "1.0.1",
